# microscope

./: .gitignore  930_hamiltonian_plot.py  Cargo.toml  Containerfile  Makefile  README.md  config.yaml  hamiltonians.txt  main.py  pm  pm_2  pyproject.toml  requirements.txt  test.qasm
assets/: alternatives.md  mutli_swap_strategy.md  olsq.md  stuck.md
examples/: 56_alltoall_1148rzz.qasm  adder_n10_medium.qasm  adder_n10_shortened.qasm  ham_BH_D_1_d_4_bh_graph_1D_grid_nonpbc_qubitnodes_Lx_12_U_40_enc_unary_d_4.qasm  ham_BH_D_1_d_4_bh_graph_1D_grid_pbc_qubitnodes_Lx_24_U_20_enc_stdbinary_d_4.qasm  ham_BH_D_2_d_4_bh_graph_2D_triag_pbc_qubitnodes_Lx_10_Ly_10_U_30_enc_stdbinary_d_4.qasm  ham_BH_D_2_d_4_bh_graph_2D_triag_pbc_qubitnodes_Lx_3_Ly_22_U_70_enc_unary_d_4.qasm  ham_BH_D_3_d_4_bh_graph_3D_grid_nonpbc_qubitnodes_Lx_2_Ly_2_Lz_2_U_20_enc_unary_d_4.qasm  ham_FH_D_1_fh_graph_1D_grid_pbc_qubitnodes_Lx_50_U_2_enc_jw.qasm  ham_OH_JW10.qasm  ham_OH_parity12.qasm  ham_TSP_Ncity_8_tsp_prob_ulysses22_Ncity_8_enc_stdbinary.qasm  ham_flat100_ham_4_flat100_7_cnf_90_cc.qasm  ham_graph_gnp_k_4_gnp_k_4_n_6_rinst_15.qasm  ham_ham_unary_color02_ash608gpia_k_3_ash608gpia_n_160_rinst_1.qasm  ham_heis_graph_2D_grid_nonpbc_qubitnodes_Lx_5_Ly_186_h_0_5.qasm  ham_heis_graph_2D_grid_pbc_qubitnodes_Lx_5_Ly_186_h_3.qasm  ham_tfim_graph_2D_grid_pbc_qubitnodes_Lx_4_Ly_148_h_6.qasm  hello_world.qasm
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/graph/: dag.rs
rust/src/routing/: front.rs  front_layer.rs  layout.rs  micro_swap.rs  mod.rs  multi_sabre.rs  sabre.rs  utils.rs
src/: main.rs
(+199 files in other folders)
