[package]
name = "microboost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "microboost"
crate-type = ["cdylib"]

[dependencies]
flame = "0.2.2"
flamegraph = "0.6.8"
indexmap = "2.9.0"
pyo3 = "0.24.0"

[profile.release]
debug = true        # Debug symbols for our profiler
lto = true          # Link-time optimization
codege-units = 1    # Slower compilation but faster code
