[package]
name = "microboost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "microboost"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.12"
flame = "0.2.2"
flamegraph = "0.6.8"
indexmap = "2.9.0"
pyo3 = "0.24.0"
rand = "0.9.1"
rustc-hash = "2.1.1"
rustworkx-core = "0.16.0"  

[profile.release]
debug = true        # Debug symbols for our profiler
lto = "fat"         # Link-time optimization
codegen-units = 1   # Slower compilation but faster code

[build]
rustflags = ["-C", "target-cpu=native"]
